# TTA.dev

./: .COORDINATION_NOTICE  .bandit  .bandit.yaml  .cgcignore  .clinerules  .dockerignore  .env  .env.example  .env.template  .gga  .gitignore  .gitmodules  .mcp.hypertool.json  .mcp.json  .memory.md  .pre-commit-config.yaml  .secrets.baseline  .semgrepignore  .windsurfrules  ACE_AB_COMPARISON_MANUAL_VS_AI_TESTS.md  ACE_COMPLETE_JOURNEY_SUMMARY.md  ACE_TODO_COMPLETION_REPORT.md  ADAPTIVE_PRIMITIVES_IMPROVEMENTS.md  AGENTS.md  AGENT_PRIMITIVE_ADOPTION_COMPLETE.md  AGENT_TRACKING_DEMO.md  AI_AGENT_COMPLEXITY_MANAGEMENT.md  ALIGNMENT_AUDIT.md  AUDIT_SUMMARY.md  BATTERIES_INCLUDED_PLAN.md  BROWSER_VERIFICATION_COMPLETE.md  CGC_ARCHITECTURE_AUDIT.md  CHANGELOG.md  CLAUDE.md  CLEANUP_SUMMARY.md  CODEBASE_TODO_ANALYSIS_2025_10_31.md  CODEBASE_TODO_MIGRATION_PLAN.md  CONSOLIDATION_EXECUTION.md  CONSOLIDATION_PHASE1.sh  CONSOLIDATION_PLAN.md  (+203 more)
apps/platform/: README.md  pyproject.toml
apps/platform/components/augment/: README.md
apps/platform/components/hypertool/: README.md
apps/platform/components/personas/: README.md
platform/agent-coordination/: L3_COMPLETION_REPORT.md  README.md  pyproject.toml
platform/agent-coordination/docs/: QUALITY_MANAGER_STATUS.md
platform/agent-coordination/examples/: README.md  cicd_manager_example.py  infrastructure_manager_example.py  quality_manager_example.py
platform/dolt/: README.md  pyproject.toml
platform/dolt/tests/: conftest.py  test_commit.py  test_diff.py  test_merge.py  test_universe.py
platform/integrations/: README.md  pyproject.toml
platform/kb-automation/: AGENTS.md  CROSS_REFERENCE_BUILDER_COMPLETE.md  KB_AUTOMATION_PHASE3_COMPLETE.md  README.md  SESSION_SUMMARY_PHASE3.md  pyproject.toml
platform/kb-automation/docs/: COMPLETE_GUIDE.md  QUICKREF.md  TUTORIAL.md
platform/kb-automation/tests/: test_code_primitives.py  test_cross_reference_builder.py  test_kb_sync_safety.py  test_link_validator.py  test_session_context_builder.py  test_todo_sync.py  test_workflows.py
platform/primitives/: .ttadevrc.example.yaml  AGENTS.md  AUGMENT_AGENT.md  CLINE_AGENT.md  CURSOR_AGENT.md  IMPROVEMENTS_QUICK_START.md  README.md  pyproject.toml
platform/primitives/.augment/: instructions.md
platform/primitives/.cline/: instructions.md
platform/primitives/.cursor/: instructions.md
platform/primitives/.github/: copilot-instructions.md
platform/primitives/docs/: OBSERVABILITY_DEMO_GUIDE.md
platform/primitives/examples/: DOC_GENERATION_GUIDE.md  EXAMPLES_API_DRIFT.md  ORCHESTRATION_DEMO_GUIDE.md  PR_REVIEW_GUIDE.md  README.md  agent_patterns_simple.py  agentic_rag_workflow.py  apm_example.py  cost_optimization.py  cost_tracking_workflow.py  e2b_advanced_iterative_refinement.py  e2b_code_execution_workflow.py  e2b_iterative_code_refinement.py  e2b_webhook_monitoring_server.py  error_handling_patterns.py  free_flagship_models.py  git_collaboration_example.py  lifecycle_demo.py  memory_workflow.py  multi_agent_workflow.py  multi_model_orchestration.py  observability_demo.py  orchestration_doc_generation.py  orchestration_pr_review.py  orchestration_test_generation.py  orchestration_test_generation_with_e2b.py  ptc_hypertool_demo.py  quick_wins_demo.py  rag_workflow.py  real_world_workflows.py  simple_ml_template_test.py  speckit_clarify_example.py  speckit_plan_example.py  speckit_specify_example.py  speckit_tasks_example.py  speckit_validation_gate_example.py  stage_kb_workflow.py  streaming_workflow.py  test_ml_template.py
platform/primitives/scripts/: integration-test-env.sh
platform/primitives/tests/: test_cache.py  test_collaboration.py  test_composition.py  test_integrations.py  test_package_managers.py  test_recovery.py  test_routing.py  test_stage_kb_integration.py  test_timeout.py
tta-agent-coordination/: .gitignore  LICENSE  README.md  pyproject.toml
tta-agent-coordination/src/tta_agent_coordination/: __init__.py  messaging.py  models.py
tta-dev/: demo_working_tta.py  hello_world.py  pyproject.toml
tta-dev/agents/context/: CONTRIBUTING.md  FINAL_VERIFICATION_REPORT.md  GEMINI.md
tta-dev/examples/: README.md  simple_demo.py
tta-dev/integrations/: pyproject.toml
tta-dev/observability/: auto_instrument.py  collector.py  collector_service.py
tta-dev/observability/dashboard/: README.md  __init__.py  app.py  demo.py
tta-dev/observability/observability_integration/: __init__.py
tta-dev/primitives/: __init__.py
tta-dev/primitives/ace/: __init__.py
tta-dev/primitives/adaptive/: base.py  cache.py  exceptions.py  fallback.py  metrics.py  retry.py
tta-dev/primitives/analysis/: analyzer.py  matcher.py  templates.py  transformer.py
tta-dev/primitives/apm/: README.md  setup.py
tta-dev/primitives/cli/: README.md  __init__.py
tta-dev/primitives/config/: __init__.py
tta-dev/primitives/core/: conditional.py  routing.py
tta-dev/primitives/extensions/: __init__.py
tta-dev/primitives/integrations/: __init__.py  google_ai_studio_primitive.py  groq_primitive.py  huggingface_primitive.py  mcp_code_execution_primitive.py  openai_primitive.py  supabase_primitive.py  together_ai_primitive.py
tta-dev/primitives/knowledge/: knowledge_base.py
tta-dev/primitives/lifecycle/: stage_criteria.py  stage_manager.py  stages.py
tta-dev/primitives/mcp_server/: __main__.py  server.py
tta-dev/primitives/orchestration/: delegation_primitive.py  multi_model_workflow.py  task_classifier_primitive.py
tta-dev/primitives/performance/: memory.py
tta-dev/primitives/recovery/: circuit_breaker.py  fallback.py
tta-dev/primitives/research/: __init__.py  free_tier_research.py
tta-dev/primitives/speckit/: __init__.py  plan_primitive.py  specify_primitive.py  tasks_primitive.py  validation_gate_primitive.py
tta-dev/primitives/testing/: __init__.py
tta-dev/ui/: README.md  dashboard.html  dashboard_html.py  observability_server.py  observability_server.py.backup
tta-dev/ui/vscode/: PHASE3_COMPLETE.md  package.json
ttadev/skills/: README.md  pyproject.toml
ttadev/skills/tests/: test_skill_base.py
(+5511 files in other folders)
