[project]
name = "ttadev"
version = "0.1.0"
description = "TTA.dev - AI-native development framework with batteries-included observability"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "TTA.dev Contributors"}
]
keywords = ["ai", "agents", "workflows", "primitives", "observability"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "aiofiles>=25.1.0",
    "aiohttp>=3.9.0",
    "aiohttp-cors>=0.8.1",
    "e2b-code-interpreter>=2.5.0",
    "mcp>=1.26.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "pyright>=1.1.0",
    "playwright>=1.40.0",
]
cgc = [
    "codegraphcontext>=0.3.1",
]

[project.urls]
Homepage = "https://github.com/theinterneti/TTA.dev"
Documentation = "https://github.com/theinterneti/TTA.dev#readme"
Repository = "https://github.com/theinterneti/TTA.dev"
Issues = "https://github.com/theinterneti/TTA.dev/issues"

[project.scripts]
tta = "ttadev.cli:main"
tta-observe = "ttadev.ui.observability_server:main"      # deprecated — use tta-dashboard
tta-dashboard = "ttadev.observability.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ttadev"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = "-v --cov=ttadev --cov-report=html --cov-report=term"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]  # Line too long (handled by formatter)

[tool.ruff.lint.per-file-ignores]
"scripts/*" = ["N999"]  # Script files use kebab-case names (valid shell convention)

[tool.pyright]
include = ["ttadev"]
exclude = ["**/__pycache__", ".venv", "build", "dist"]
pythonVersion = "3.11"
typeCheckingMode = "basic"
