[project]
name = "tta-platform-app"
version = "0.1.0"
description = "TTA.dev platform application"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "TTA.dev Team"}
]
dependencies = [
    "tta-dev-primitives",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["components"]

[tool.uv.sources]
tta-dev-primitives = { workspace = true }
