[project]
name = "tta-agent-coordination"
version = "1.0.0"
description = "Atomic DevOps Architecture - Agent coordination and orchestration primitives"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "TTA.dev Team" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "tta-dev-primitives>=1.3.0",
    "PyGithub>=2.1.1",
    "docker>=7.0.0",
    "pytest-json-report>=1.5.0",
]

[project.urls]
Homepage = "https://github.com/theinterneti/TTA.dev"
Repository = "https://github.com/theinterneti/TTA.dev"
Changelog = "https://github.com/theinterneti/TTA.dev/blob/main/CHANGELOG.md"

[tool.hatch.publish.index]
url = "https://upload.pypi.org/legacy/"

[tool.uv.sources]
tta-dev-primitives = { workspace = true }

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.1",
    "ruff>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["tta_agent_coordination"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"] # Allow unused imports in __init__.py
"examples/*.py" = [
    "E501",
    "B007",
] # Allow long lines and unused loop variables in examples
"src/tta_agent_coordination/wrappers/*.py" = [
    "E501",
] # Allow long docstrings in wrappers
"src/tta_agent_coordination/managers/*.py" = [
    "E501",
] # Allow long docstrings in managers
"tests/*" = ["B", "S"] # Relax some rules for tests
