[project]
name = "tta-dolt-primitives"
version = "0.1.0"
description = "Dolt primitives for versioned, branchable data — enabling parallel universe mechanics in TTA and any branching-state application"
authors = [{ name = "TTA Development Team" }]
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "tta-dev-primitives>=1.3.0",
    "pydantic>=2.6.0",
    "structlog>=24.1.0",
    "aiomysql>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.3.0",
]

[project.urls]
Homepage = "https://github.com/theinterneti/TTA.dev"
Repository = "https://github.com/theinterneti/TTA.dev"
Changelog = "https://github.com/theinterneti/TTA.dev/blob/main/CHANGELOG.md"

[tool.uv.sources]
tta-dev-primitives = { workspace = true }

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests (requires running Dolt SQL server)",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN", "E501", "E402", "S101", "PLR2004"]
