[project]
name = "tta-dev-integrations"
version = "0.1.0"
description = "Production-ready integration primitives for TTA.dev - OpenAI, Anthropic, Supabase, and more"
authors = [{ name = "TTA Development Team" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "tta-dev-primitives>=1.0.0",
    "pydantic>=2.6.0",
    "structlog>=24.1.0",
    "httpx>=0.27.0",
    "tenacity>=8.2.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]
openai = [
    "openai>=1.0.0",
]
anthropic = [
    "anthropic>=0.18.0",
]
ollama = [
    "ollama>=0.1.0",
]
supabase = [
    "supabase>=2.0.0",
]
database = [
    "aiosqlite>=0.19.0",
    "asyncpg>=0.29.0",
]
auth = [
    "pyjwt>=2.8.0",
    "httpx>=0.27.0",
]
all = [
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "ollama>=0.1.0",
    "supabase>=2.0.0",
    "aiosqlite>=0.19.0",
    "asyncpg>=0.29.0",
    "pyjwt>=2.8.0",
]

[tool.uv.sources]
tta-dev-primitives = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tta_dev_integrations"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests (require external services)",
    "unit: marks tests as unit tests (no external dependencies)",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "ANN", # flake8-annotations
    "B",   # flake8-bugbear
    "A",   # flake8-builtins
    "COM", # flake8-commas
    "C4",  # flake8-comprehensions
]
ignore = [
    "ANN101", # Missing type annotation for self
    "ANN102", # Missing type annotation for cls
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
