[project]
name = "tta-kb-automation"
version = "1.0.0"
description = "Automated knowledge base maintenance and documentation generation for TTA.dev"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "TTA.dev Team", email = "dev@tta.dev" }]
keywords = [
    "knowledge-base",
    "automation",
    "documentation",
    "ai-agents",
    "logseq",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Documentation",
    "Topic :: Software Development :: Documentation",
]

dependencies = ["tta-dev-primitives>=1.3.0", "tta-observability-integration>=1.0.0"]

[project.urls]
Homepage = "https://github.com/theinterneti/TTA.dev"
Repository = "https://github.com/theinterneti/TTA.dev"
Changelog = "https://github.com/theinterneti/TTA.dev/blob/main/CHANGELOG.md"

[tool.hatch.publish.index]
url = "https://upload.pypi.org/legacy/"

[tool.uv.sources]
tta-dev-primitives = { workspace = true }
tta-observability-integration = { workspace = true }

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-timeout>=2.3.0",
    "ruff>=0.6.0",
    "pyright>=1.1.380",
]

[project.scripts]
tta-kb-automation = "tta_kb_automation.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "unit: Unit tests (fast, isolated, default)",
    "integration: Integration tests (slower, real resources, explicit opt-in)",
    "slow: Slow tests (long-running operations)",
]
timeout = 60 # Default 60s for unit tests
timeout_func_only = true
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=src/tta_kb_automation",
    "--cov-report=term-missing",
    "--cov-report=html",
    "-m",
    "not integration and not slow", # Default: only unit tests
]

[tool.coverage.run]
source = ["src/tta_kb_automation"]
omit = ["*/tests/*", "*/__pycache__/*", "*/site-packages/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long (handled by formatter)
]

[tool.pyright]
include = ["src"]
exclude = ["**/__pycache__", "**/.pytest_cache", "**/node_modules"]
pythonVersion = "3.11"
typeCheckingMode = "strict"
reportMissingTypeStubs = false
reportUnknownMemberType = false
